--- a/MembiOS.xcframework/ios-x86_64-simulator/MembiOS.framework/Frameworks/NFCDocumentReader.framework/NFCDocumentReader_NFCDocumentReader.bundle/es.lproj/NDRLocalizable.strings
+++ b/MembiOS.xcframework/ios-x86_64-simulator/MembiOS.framework/Frameworks/NFCDocumentReader.framework/NFCDocumentReader_NFCDocumentReader.bundle/es.lproj/NDRLocalizable.strings
@@ -4,4 +4,4 @@
 "text_nfc_read_successfull_title" = "NFC leído exitosamente";
 "text_intro_chip_state_fail" = "¡Ups! El NFC no ha podido ser leído";
 "text_diagnostic_NFC_timeout_description" = "Has excedido el tiempo de lectura de NFC. Por favor intenta de nuevo";
-"text_chip_duplicated_session_error" = "El proceso de captura se ha duplicado, por favor vuelva a intentarlo tras desaparecer este mensaje"
+"text_chip_duplicated_session_error" = "El proceso de captura se ha duplicado, por favor vuelva a intentarlo tras desaparecer este mensaje";
