--- a/MembiOS.xcframework/ios-x86_64-simulator/MembiOS.framework/Frameworks/NFCDocumentReader.framework/NFCDocumentReader_NFCDocumentReader.bundle/pt-PT.lproj/NDRLocalizable.strings
+++ b/MembiOS.xcframework/ios-x86_64-simulator/MembiOS.framework/Frameworks/NFCDocumentReader.framework/NFCDocumentReader_NFCDocumentReader.bundle/pt-PT.lproj/NDRLocalizable.strings
@@ -4,4 +4,4 @@
 "text_nfc_read_successfull_title" = "A nfc leu com êxito";
 "text_intro_chip_state_fail" = "Puxa! O NFC não pôde ser lido";
 "text_diagnostic_NFC_timeout_description" = "Excedeu o tempo de leitura NFC. Tente novamente";
-"text_chip_duplicated_session_error" = "O processo de captura foi duplicado, favor tentar novamente após o desaparecimento desta mensagem"
+"text_chip_duplicated_session_error" = "O processo de captura foi duplicado, favor tentar novamente após o desaparecimento desta mensagem";
